<?xml version="1.0" encoding="utf-8"?>
<resources>
     <string name="app_name">SMSDemo</string>
     <string name="title_activity_smsdemo">Message Test</string>
     <string name="menu_settings">Settings</string>
     <string name="EnterNumber">Enter the number</string>
     <string name="EnterMessage">Enter Message</string>
     <string name="SMSProgrammatically">SMS1</string>
     <string name="SMSIntent">SMS2</string>
     <string name="SaveInSent">SMS3</string>
     
  </resources>